# coffe-team-cinema-online

./: .env.example  .gitignore  Dockerfile  README.md  api.json  app.py  config.py  db.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  test.py
.github/workflows/: ci-cd.yml
app/: .env.example  main.py  requirements.txt  router.py
app/admin/: views.py
app/controllers/: google_controller.py  oauth_controller.py  reset_pass_controller.py  yandex_controller.py
app/core/: config.py  init_db.py  path_settings.py  run_app.py
app/crud/: crud_actors.py  crud_genre.py  crud_genre_movie.py  crud_movies.py  crud_user.py
app/models/: actor.py  movie.py  news.py  reward.py  user.py
app/routers/: router.py
app/schemas/: Actor.py  Movie.py  User.py
app/tests/: conftest.py  test_app.py  test_genre.py  test_movies.py  test_reset_pass.py  test_users.py
app/utils/: celery_schedule.py  form_actors.py  form_movies.py  mail_service.py
backend/: requirements.txt
backend/app/: .env.example  main.py  requirements.txt  router.py
backend/migrations/: env.py
db_design/: Кино.drawio
migrations/: env.py
migrations/versions/: 02799b42fa0e_fix_models.py  02a6b5d6b4fb_add_cascade_in_movie_and_genre.py  02c405c0d286_create_movies_tables.py  2fbda032f9cb_create_movies_tables.py  3865859e7415_edit_actors_model.py  (+18 more)
models/: actor.py  movie.py  news.py  reward.py  user.py
nginx/: Dockerfile  nginx.conf
requirements/: dev.txt
src/: app.py  config.py  db.py
templates/: index.html
tests/: conftest.py  test_app.py  test_reset_pass.py
(+73 files in other folders)
