[tool.poetry]
name = "cinema-online"
version = "0.1.0"
description = ""
authors = ["tanuki <tanuki.evil@yandex.ru>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["all"], version = "^0.115.0" }
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
pyjwt = { extras = ["crypto"], version = "^2.9.0" }
alembic = "^1.13.3"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",
    "F",
    #    "W"
]
ignore = ["E501"]
line-length = 100
exclude = [".git", "__pycache__", ".env", ".venv", "migrations", "tests"]
fix = false
[tool.ruff.per-file-ignores]
"tests/*.py" = ["F401"]  # Игнорировать F401 в тестовых файлах

[tool.pytest.ini_options]
pythonpath = [
    ".", "src"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = "ignore"